--- a/dados_enem.ipynb
+++ b/dados_enem.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5628a373",
+   "id": "b7ae4014",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b95c865",
+   "id": "3adbc4fd",
    "metadata": {},
    "source": [
     "age_ranges = {\n",
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f68ab76",
+   "id": "e309f3e8",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3adc8d82",
+   "id": "f440a786",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7a0d87bf",
+   "id": "c50955d8",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1bbb1fb4",
+   "id": "84f92cbb",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "65269c18",
+   "id": "6b026d54",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c90839dc",
+   "id": "6b683ecf",
    "metadata": {},
    "outputs": [
     {
@@ -708,8 +708,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d81db14c",
+   "execution_count": 14,
+   "id": "d3b3d386",
    "metadata": {},
    "outputs": [
     {
@@ -971,6 +971,13 @@
       "/home/andremeneses/miniconda3/envs/tf/lib/python3.9/site-packages/sweetviz/series_analyzer_numeric.py:25: FutureWarning: The 'mad' method is deprecated and will be removed in a future version. To compute the same result, you may do `(df - df.mean()).abs().mean()`.\n",
       "  stats[\"mad\"] = series.mad()\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report relatorio_enem.html was generated! NOTEBOOK/COLAB USERS: the web browser MAY not pop up, regardless, the report IS saved in your notebook/colab files.\n"
+     ]
     }
    ],
    "source": [
@@ -986,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1d6da16",
+   "id": "c5daf702",
    "metadata": {},
    "outputs": [],
    "source": []
